# CRM-system

./: .env.example  .gitignore  .pylintrc  README.md  compose.yaml  nginx.conf  pyproject.toml
crm-system/: manage.py
crm-system/crm_core/: settings.py  urls.py
crm_system/advertisements/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
crm_system/advertisements/migrations/: 0001_initial.py  0002_advertisement_start_date_lt_end_date_constraint.py  0003_advertisement_promotion_channel.py
crm_system/auth_app/: forms.py  urls.py  views.py
crm_system/contracts/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
crm_system/contracts/migrations/: 0001_initial.py  0002_contract_customer_contract_product.py  0003_contract_lead_alter_contract_customer.py  0004_remove_contract_product_contract_product.py  0005_contract_check_date_constraint.py  0006_alter_contract_check_date_constraint.py  0007_contract_status.py  (+9 more)
crm_system/crm_app/: urls.py  views.py
crm_system/crm_core/: asgi.py  settings.py  tests.py  urls.py  wsgi.py
crm_system/customers/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
crm_system/fixtures/: db_data_full.json
crm_system/leads/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
crm_system/products/: admin.py  apps.py  forms.py  tests.py  urls.py  views.py
crm_system/products_app/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
crm_system/templates/: _base.html
crm_system/users_app/: forms.py  tests.py  urls.py  views.py
(+51 files in other folders)
