[project]
name = "crm_system"
version = "0.1.0"
description = "crm system"
authors = [
    {name = "Alex Suslov",email = "suslov.lexx@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "django (>=5.2.5,<6.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "psycopg (>=3.2.9,<4.0.0)",
    "django-debug-toolbar (>=6.0.0,<7.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pylint-django = ">=2.6.1,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
